examples/errors/type_error.sl
var x: int = false;
var y: int = 12;
var z: bool = false;

if(y == z) => print(1);